@@ -4,11 +4,28 @@
 
 %KPilot consists of a core library of utility and communications
 classes which are used by two applications: KPilot itself
-(which is little more than a clumsy data viewer and 
+(which is little more than a clumsy data viewer and
 configuration shell) and the KPilot daemon which does
 the actual communications with the hadheld.
 The daemon loads plugins (called conduits) on demand
 which are used for syncing specific data on the PC
 with the handheld.
+
+The lib/ directory holds the base library for KPilot.
+This boils down to a bunch of wrappers for pilot-link
+classes (not using p-l's C++ code because that isn't
+Qt-ish) and a few classes that do interesting things:
+KPilotDeviceLink for managing the device connection,
+and SyncAction for doing stuff during a sync.
+
+The kpilot/ directory houses several applications:
+kpilot and kpilotDaemon are installed, and kpilotTest
+which is not installed but which can function as a demon
+under closely-controlled circumstances from the command-line.
+
+Under conduits/ a bunch of directories hold the individual
+conduits; the "four button" apps are in vcalconduit/ (ToDo and
+Datebook), abbrowserconduit/ (Addresses, not the newer Contacts)
+and knotes/ or memofileconduit/ (Memos).
 
 */
