@@ -5,10 +5,14 @@
 ** Copyright (C) 1998-2001 by Dan Pilone
 ** Copyright (C) 2003-2004 Reinhold Kainhofer <reinhold@kainhofer.com>
 **
-** This file defines the class PilotRecord, which is the lowest-
+*/
+
+/**
+** @file This file defines the class PilotRecord, which is the lowest-
 ** denominator representation of the bits used in a Pilot-based
-** database record. This can be converted into a PilotAppCategory
-** (subclass) object, which is the interpreted form of the bits.
+** database record. The PilotRecord is @em just a collection of
+** bits, nothing more. It can be converted to an interpreted form
+** using some other classes like PilotAppCategory.
 */
 
 /*
@@ -38,44 +42,85 @@
 
 struct pi_buffer_t;
 
+#include <pi-dlp.h>
 #include <pi-file.h>
 
-#include <qvaluelist.h>
-
-typedef QValueList<recordid_t> RecordIDList;
-
+/** An "uninterpreted" representation of the bits comprising a HH record.
+* This class maintains a created and deleted count which can be requested
+* using allocationInfo().
+*/
 class KDE_EXPORT PilotRecord
 {
 public:
-	// This constructor makes a copy of the data buffer
-	PilotRecord(void* data, int len, int attrib, int cat, pi_uid_t uid);
+	/** Constructor. Using the given @param data and @param length, create
+	* a record. Give it the additional attributes and category numbers;
+	* the UID is a HH unique ID for identifying records.
+	*
+	* This constructor makes a copy of the data buffer (and owns that buffer).
+	*/
+	PilotRecord(void* data, int length, int attrib, int cat, pi_uid_t uid);
+
 #if PILOT_LINK_NUMBER >= PILOT_LINK_0_12_0
-	// This constructor assumes ownership of the data buffer
+	/** Constructor. Using the given buffer @param buf (which carries its
+	* own data and length), create a record. Otherwise much like the
+	* above constructor @em except that this record assumes ownership
+	* of the buffer, and doesn't make an additional copy
+	* (In practice, this just saves copying around extra buffers).
+	*/
 	PilotRecord(pi_buffer_t *buf, int attrib, int cat, pi_uid_t uid) :
 		fData((char *)buf->data),fLen(buf->used),fAttrib(attrib),
 		fCat(cat),fID(uid),fBuffer(buf)
 	{ fAllocated++; }
-	~PilotRecord()
-	{
-		if (fBuffer) { pi_buffer_free(fBuffer); }
-		else { delete [] fData; } fDeleted++;
-	}
-#else
-	~PilotRecord() { delete [] fData; fDeleted++; }
 #endif
 
+	/** Destructor. Dispose of the buffers in the right form. */
+	~PilotRecord()
+	{
+#if PILOT_LINK_NUMBER >= PILOT_LINK_0_12_0
+		if (fBuffer) { pi_buffer_free(fBuffer); } else
+#endif
+		{ delete [] fData; }
+		fDeleted++;
+	}
 
-	char* getData() const { return fData; }
-	int   getLen() const { return fLen; }
-
+	/** Constructor. Copies the data from the @param orig record. */
 	PilotRecord(PilotRecord* orig);
 
+	/** Retrieve the data buffer for this record. Note that trying
+	* to change this data is fraught with peril -- especially trying
+	* to lengthen it.
+	*
+	* @see setData
+	*/
+	char *getData() const
+	{
+#if PILOT_LINK_NUMBER >= PILOT_LINK_0_12_0
+		if (fBuffer) return fBuffer->data; else
+#endif
+		return fData;
+	}
+
+	/** Returns the length of the data for this record. */
+	int getLen() const {
+#if PILOT_LINK_NUMBER >= PILOT_LINK_0_12_0
+		if (fBuffer) return fBuffer->used; else
+#endif
+		return fLen;
+	}
+
+	/** A constant, really left over from PalmOS 4 days, when records
+	* could be 64k in size at most. It is used in various places to
+	* dimension buffers, but should be considered deprecated.
+	*/
 	enum { APP_BUFFER_SIZE = 0xffff } ;
 
+	/** Assignment operator. Makes a copy of the @param orig record. */
 	PilotRecord& operator=(PilotRecord& orig);
 
-
+	/** Sets the data for this record. Makes a copy of the data buffer. */
 	void setData(const char* data, int len);
+
+
 	inline int   getAttrib() const { return fAttrib; }
 	inline void  setAttrib(int attrib) { fAttrib = attrib; }
 
